<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="horizontal"
    android:weightSum="1"
    tools:context="a.masacorporal.AcercaDe"><![CDATA[



        android:layout_width="wrap_content"
        android:layout_height="69dp">



    ]]>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="447dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="        Andrea Muñoz"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/UniversidadMariana"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/IngenieriaDeSistemas"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/NovenoSemestre"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="30sp"
            tools:textColor="?attr/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0sp"
                android:layout_height="90sp"
                android:layout_weight="0.62"
                app:srcCompat="@mipmap/wasap" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_weight="1"
                android:text="3128145027"
                android:textColor="?attr/colorControlActivated"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                app:srcCompat="@mipmap/face" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_weight="0.52"
            android:text="andrea.munozv.24"
            android:gravity="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="24"
            android:layout_weight="1"
            android:onClick="salir"
            android:text="@string/Regresar"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="314dp" />

    </LinearLayout>


</LinearLayout>

