<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_masa_corporal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a.masacorporal.Masa_corporal">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_altura"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="102dp"
        android:text="@string/ALTURA"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/PESO"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:weightSum="1"
        android:layout_above="@+id/linearLayout">

        <EditText
            android:id="@+id/et_peso"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:ems="5"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_altura"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:ems="5"
            android:inputType="phone" />
    </LinearLayout>

    <Button
        android:id="@+id/Calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:onClick="masa"
        android:text="@string/CALCULAR"
        android:layout_above="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_above="@+id/Calcular"
        android:layout_below="@+id/textView3"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Calcular"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_altura"
            android:layout_marginTop="25dp"
            android:layout_toLeftOf="@+id/Calcular"
            app:srcCompat="@mipmap/pesa" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/Calcular"
            android:layout_toRightOf="@+id/Calcular"
            app:srcCompat="@mipmap/altura" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_resultado"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignEnd="@+id/Calcular"
                android:layout_alignLeft="@+id/Calcular"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/Calcular"
                android:layout_alignStart="@+id/Calcular"
                android:layout_margin="2dp"
                android:layout_marginTop="50dp"
                android:textIsSelectable="false"
                android:textSize="24sp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:onClick="historial"
        android:text="INFORMACION" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:onClick="acercade"
        android:text="@string/ACERCA" />


</RelativeLayout>
